--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nuogz/desire-harb-default",
-	"version": "4.0.0",
+	"version": "4.0.1",
 	"description": "A simple harb for desire, also as the default harb of desire.",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
@@ -13,6 +13,7 @@
 		"axios": "^0.21.1",
 		"koa-mount": "^4.0.0",
 		"koa-static": "^5.0.0",
+		"multer": "^1.4.2",
 		"ws": "^7.4.2"
 	}
 }
