--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,11 @@
 {
 	"compilerOptions": {
 		"module": "commonJS",
+		"moduleResolution": "node",
 		"target": "esnext",
 		"experimentalDecorators": true,
 	},
-	"exclude": []
+	"exclude": [
+		"node_modules",
+	]
 }
