--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "@nuogz/desire-harb-default",
 	"version": "4.1.0",
-	"description": "A simple harb for desire, also as the default harb of desire.",
+	"description": "A simple harb for desire, also as the default harb of desire",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
 	"main": "index.js",
 	"devDependencies": {
-		"eslint": "^7.18.0"
+		"eslint": "^7.25.0"
 	},
 	"dependencies": {
 		"@koa/multer": "^3.0.0",
@@ -14,6 +14,6 @@
 		"koa-mount": "^4.0.0",
 		"koa-static": "^5.0.0",
 		"multer": "^1.4.2",
-		"ws": "^7.4.2"
+		"ws": "^7.4.5"
 	}
 }
