--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
 	"name": "@nuogz/desire-harb-default",
-	"version": "5.0.2",
+	"version": "5.1.0",
 	"description": "the simple default harb of desire",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
-	"main": "./index.js",
-	"type": "module",
 	"repository": {
 		"type": "git",
 		"url": "github:nuogz/desire-harb-default"
 	},
+	"type": "module",
+	"typesSource": [],
+	"engines": {
+		"node": ">=14.18.1"
+	},
+	"main": "index.js",
 	"files": [
 		"index.js",
 		"lib/**",
 		"locale/**"
 	],
-	"engines": {
-		"node": ">=14.18.1"
-	},
-	"devDependencies": {
-		"eslint": "^8.21.0"
-	},
 	"dependencies": {
 		"@koa/multer": "^3.0.0",
-		"@nuogz/i18n": "^1.2.0",
+		"@nuogz/i18n": "^1.2.1",
+		"@nuogz/wock": "^1.0.0",
 		"axios": "^0.27.2",
 		"co-body": "^6.1.0",
 		"koa-mount": "^4.0.0",
@@ -31,5 +30,8 @@
 		"koa-static": "^5.0.0",
 		"multer": "1.4.5-lts.1",
 		"ws": "^8.8.1"
+	},
+	"devDependencies": {
+		"eslint": "^8.22.0"
 	}
 }
