--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nuogz/desire-harb-default",
-	"version": "5.3.0",
+	"version": "5.3.1",
 	"description": "default harb of desire",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
@@ -22,7 +22,7 @@
 	"dependencies": {
 		"@koa/multer": "^3.0.0",
 		"@nuogz/i18n": "^1.2.1",
-		"@nuogz/wock": "^1.1.1",
+		"@nuogz/wock-server": "^2.0.0",
 		"axios": "^0.27.2",
 		"co-body": "^6.1.0",
 		"koa-mount": "^4.0.0",
