--- a/package.json
+++ b/package.json
@@ -1,37 +1,49 @@
 {
-	"name": "@nuogz/desire-harb-default",
-	"version": "5.3.1",
-	"description": "default harb of desire",
+	"name": "@nuogz/desire-harbour",
+	"version": "6.0.0",
+	"description": "default harbour of desire",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
 	"repository": {
 		"type": "git",
-		"url": "github:nuogz/desire-harb-default"
+		"url": "github:nuogz/desire-harbour"
 	},
 	"type": "module",
 	"typesSource": [],
 	"engines": {
 		"node": ">=14.18.1"
 	},
-	"main": "index.js",
+	"sideEffects": false,
+	"main": "./index.js",
 	"files": [
 		"index.js",
 		"lib/**",
-		"locale/**"
+		"locale/**",
+		"**/*.d.ts"
 	],
+	"scripts": {
+		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --allowJs --moduleResolution nodenext --module esnext --target esnext --experimentalDecorators"
+	},
 	"dependencies": {
-		"@koa/multer": "^3.0.0",
-		"@nuogz/i18n": "^1.2.1",
-		"@nuogz/wock-server": "^2.0.0",
-		"axios": "^0.27.2",
+		"@koa/multer": "^3.0.2",
+		"@koa/router": "^12.0.0",
+		"@nuogz/desire": "^6.0.4",
+		"@nuogz/i18n": "^3.1.0",
+		"@nuogz/wock-server": "^3.1.1",
+		"axios": "^1.3.5",
 		"co-body": "^6.1.0",
 		"koa-mount": "^4.0.0",
-		"koa-router": "^12.0.0",
 		"koa-static": "^5.0.0",
-		"multer": "1.4.5-lts.1",
-		"ws": "^8.9.0"
+		"multer": "1.4.5-lts.1"
 	},
 	"devDependencies": {
-		"eslint": "^8.25.0"
+		"@types/koa-static": "^4.0.2",
+		"@types/koa__multer": "^2.0.4",
+		"@types/koa__router": "^12.0.0",
+		"eslint": "^8.38.0",
+		"typescript": "^4.9.5"
+	},
+	"peerDependencies": {
+		"@nuogz/desire": "^6.0.4"
 	}
 }
