--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nuogz/desire-harbour",
-	"version": "6.0.0",
+	"version": "6.1.0",
 	"description": "default harbour of desire",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
@@ -9,7 +9,9 @@
 		"url": "github:nuogz/desire-harbour"
 	},
 	"type": "module",
-	"typesSource": [],
+	"typesSource": [
+		"node"
+	],
 	"engines": {
 		"node": ">=14.18.1"
 	},
@@ -28,9 +30,9 @@
 		"@koa/multer": "^3.0.2",
 		"@koa/router": "^12.0.0",
 		"@nuogz/desire": "^6.0.4",
-		"@nuogz/i18n": "^3.1.0",
-		"@nuogz/wock-server": "^3.1.1",
-		"axios": "^1.3.5",
+		"@nuogz/i18n": "^3.2.1",
+		"@nuogz/wock-server": "^3.1.3",
+		"axios": "^1.4.0",
 		"co-body": "^6.1.0",
 		"koa-mount": "^4.0.0",
 		"koa-static": "^5.0.0",
@@ -40,8 +42,8 @@
 		"@types/koa-static": "^4.0.2",
 		"@types/koa__multer": "^2.0.4",
 		"@types/koa__router": "^12.0.0",
-		"eslint": "^8.38.0",
-		"typescript": "^4.9.5"
+		"eslint": "^8.44.0",
+		"typescript": "^5.1.6"
 	},
 	"peerDependencies": {
 		"@nuogz/desire": "^6.0.4"
