--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
 	"name": "@nuogz/desire-harbour",
-	"version": "6.1.1",
+	"version": "6.2.0",
 	"description": "default harbour of desire",
-	"author": "Nuogz",
+	"author": "DanoR",
 	"license": "LGPL-3.0-or-later",
 	"repository": {
 		"type": "git",
 		"url": "github:nuogz/desire-harbour"
 	},
+	"private": false,
 	"type": "module",
 	"typesSource": [
 		"node"
 	],
+	"sideEffects": false,
 	"engines": {
 		"node": ">=14.18.1"
 	},
-	"sideEffects": false,
 	"main": "./index.js",
 	"files": [
 		"index.js",
@@ -23,29 +24,34 @@
 		"locale/**",
 		"**/*.d.ts"
 	],
+	"typings": "./index.d.ts",
 	"scripts": {
-		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --allowJs --moduleResolution nodenext --module esnext --target esnext --experimentalDecorators"
+		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --moduleResolution nodenext --module nodenext --target esnext --experimentalDecorators --strict --allowJs --jsx preserve"
 	},
 	"dependencies": {
 		"@koa/multer": "^3.0.2",
-		"@koa/router": "^12.0.0",
-		"@nuogz/desire": "^6.0.5",
-		"@nuogz/i18n": "^3.2.1",
-		"@nuogz/wock-server": "^3.1.3",
-		"axios": "^1.4.0",
+		"@koa/router": "^12.0.1",
+		"@nuogz/desire": "^6.1.0",
+		"@nuogz/i18n": "^3.3.1",
+		"@nuogz/wock-server": "^3.2.3",
+		"axios": "^1.6.2",
 		"co-body": "^6.1.0",
 		"koa-mount": "^4.0.0",
 		"koa-static": "^5.0.0",
 		"multer": "1.4.5-lts.1"
 	},
 	"devDependencies": {
-		"@types/koa-static": "^4.0.2",
-		"@types/koa__multer": "^2.0.4",
-		"@types/koa__router": "^12.0.0",
-		"eslint": "^8.44.0",
-		"typescript": "^5.1.6"
+		"@types/koa-compress": "^4.0.6",
+		"@types/koa-static": "^4.0.4",
+		"@types/koa__cors": "^4.0.3",
+		"@types/koa__multer": "^2.0.7",
+		"@types/koa__router": "^12.0.4",
+		"@types/node": "^20.10.3",
+		"@types/ws": "^8.5.10",
+		"eslint": "^8.55.0",
+		"typescript": "^5.3.3"
 	},
 	"peerDependencies": {
-		"@nuogz/desire": "^6.0.5"
+		"@nuogz/desire": "^6.1.0"
 	}
 }
