--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
-	"eslint.experimental.useFlatConfig": true,
-	"files.trimTrailingWhitespace": true
+	"eslint.onIgnoredFiles": "warn",
+	"files.eol": "\n",
+	"files.insertFinalNewline": true,
+	"files.trimFinalNewlines": true,
+	"files.trimTrailingWhitespace": true,
+	"javascript.preferences.importModuleSpecifierEnding": "js"
 }
