--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "@nuogz/desire-harbour",
-	"version": "6.2.2",
+	"version": "6.3.0",
 	"description": "Default harbour of desire",
 	"author": "DanoR",
 	"license": "LGPL-3.0-or-later",
 	"repository": {
 		"type": "git",
-		"url": "github:nuogz/desire-harbour"
+		"url": "git+https://github.com/nuogz/desire-harbour.git"
 	},
 	"private": false,
 	"type": "module",
@@ -15,7 +15,7 @@
 	],
 	"sideEffects": false,
 	"engines": {
-		"node": ">=14.18.1"
+		"node": ">=20"
 	},
 	"main": "./index.js",
 	"files": [
@@ -29,29 +29,33 @@
 		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --moduleResolution nodenext --module nodenext --target esnext --experimentalDecorators --strict --allowJs --jsx preserve"
 	},
 	"dependencies": {
-		"@koa/multer": "^3.0.2",
 		"@koa/router": "^12.0.1",
-		"@nuogz/desire": "^6.1.1",
+		"@nuogz/desire": "^6.2.0",
 		"@nuogz/i18n": "^3.3.1",
 		"@nuogz/wock-server": "^3.2.3",
-		"axios": "^1.6.8",
-		"co-body": "^6.1.0",
+		"axios": "^1.7.2",
+		"co-body": "^6.2.0",
 		"koa-mount": "^4.0.0",
 		"koa-static": "^5.0.0",
 		"multer": "1.4.5-lts.1"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.5.0",
+		"@stylistic/eslint-plugin-js": "^2.2.2",
 		"@types/koa-compress": "^4.0.6",
+		"@types/koa-favicon": "^2.1.3",
 		"@types/koa-static": "^4.0.4",
 		"@types/koa__cors": "^4.0.3",
 		"@types/koa__multer": "^2.0.7",
 		"@types/koa__router": "^12.0.4",
-		"@types/node": "^20.12.7",
+		"@types/multer": "^1.4.11",
+		"@types/node": "^20.14.7",
 		"@types/ws": "^8.5.10",
-		"eslint": "^8.57.0",
-		"typescript": "^5.4.5"
+		"eslint": "^9.5.0",
+		"globals": "^15.6.0",
+		"typescript": "^5.5.2"
 	},
 	"peerDependencies": {
-		"@nuogz/desire": "^6.1.1"
+		"@nuogz/desire": "^6.2.0"
 	}
 }
