--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,17 @@
 		"experimentalDecorators": true,
 		"strict": true,
 		"allowJs": true,
-		"jsx": "preserve"
+		"jsx": "preserve",
+		"declaration": true,
+		"declarationDir": "./types",
+		"emitDeclarationOnly": true
 	},
 	"include": [
+		"bases.d.ts",
 		"**/*.js"
 	],
 	"exclude": [
+		"eslint.config.js",
 		"node_modules",
 		"test"
 	]
